--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -32,10 +32,5 @@
     "noUncheckedSideEffectImports": true
   },
   "include": ["src/**/*"],
-  "exclude": [
-    "node_modules",
-    "dist",
-    "build",
-    "logs",
-  ]
+  "exclude": ["node_modules", "dist", "build", "logs"]
 }
